hard-gists/5860168615a35b5b5ef69710d61f02d4/run.log
=== Docker Run Log for 5860168615a35b5b5ef69710d61f02d4 ===
Started at: Mi 29. Okt 16:07:20 CET 2025

[2025-10-29 16:07:20] START: Running container for 5860168615a35b5b5ef69710d61f02d4
[2025-10-29 16:07:20] SUCCESS: Container 5e367290730940bfe5cd2fcd096f72e9fd7dad2ac152b9a5e9c3d44b4c1053d8 started for 5860168615a35b5b5ef69710d61f02d4
=== Container logs for 5860168615a35b5b5ef69710d61f02d4 ===
  File "/snippet.py", line 40
    print details[j]
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5860168615a35b5b5ef69710d61f02d4 ===
[2025-10-29 16:07:22] INFO: Container 5e367290730940bfe5cd2fcd096f72e9fd7dad2ac152b9a5e9c3d44b4c1053d8 has stopped
